--- a/css/theme/source/xebia.scss
+++ b/css/theme/source/xebia.scss
@@ -46,12 +46,12 @@ section.has-light-background {
   .footer-left {
     position: absolute;
     bottom: $marginFromBottom;
-    left: 0;
+    left: 20px;
   }
   .footer-right {
     bottom: $marginFromBottom;
     position: absolute;
-    right: 0;
+    right: 20px;
   }
 }
 
